# tmembrain

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  chatbot.py  openapi.yaml  verify_metadata_isolation.py
.github/workflows/: build-wheels.yml  node.yml  publish-to-devpi.yml  python.yml  rust.yml  security.yml
crates/membrain-audit/: Cargo.toml
crates/membrain-audit/src/: decision_log.rs  lib.rs  metrics.rs
crates/membrain-compression/: Cargo.toml
crates/membrain-compression/src/: decay.rs  distillation.rs  lib.rs
crates/membrain-conflict/: Cargo.toml
crates/membrain-conflict/src/: lib.rs  openai_resolver.rs  resolver.rs
crates/membrain-conflict/tests/: resolver_contract.rs  resolver_end_to_end.rs
crates/membrain-core/: Cargo.toml
crates/membrain-core/src/: config.rs  error.rs  lib.rs
crates/membrain-core/src/memory/: agent_state.rs  episodic.rs  mod.rs  procedural.rs  semantic.rs
crates/membrain-core/src/traits/: embedding.rs  extraction.rs  mod.rs  openai_embedding.rs  openai_extractor.rs  storage.rs
crates/membrain-core/src/types/: confidence.rs  embedding.rs  ids.rs  mod.rs  provenance.rs
crates/membrain-core/tests/: config_roundtrip.rs  embedding_trait_contract.rs  error_conversions.rs  extraction_trait_contract.rs  memory_type_roundtrip.rs  storage_trait_contract.rs  type_properties.rs
crates/membrain-ffi/: Cargo.toml  membrain.h
crates/membrain-ffi/src/: client.rs  lib.rs  tests.rs  types.rs
crates/membrain-ffi/src/c_api/: client.rs  distributed.rs  flat.rs  graph.rs  handle.rs  hnsw.rs  hnsw_scoped.rs  ivf.rs  lsh.rs  mod.rs  multi_tenant.rs  safety.rs  sharded.rs  vamana.rs
crates/membrain-ffi/src/c_api/concurrent/: flat.rs  hnsw.rs  ivf.rs  lsh.rs  mod.rs  vamana.rs
crates/membrain-ffi/tests/: concurrent_c_api.rs  flat_index_roundtrip.rs  hnsw_index_roundtrip.rs  metadata_scope_roundtrip.rs  safety_contract.rs
crates/membrain-ffi/tests/common/: mod.rs
crates/membrain-graph/: Cargo.toml
crates/membrain-graph/src/: attention.rs  bridge.rs  config.rs  edge.rs  error.rs  graph.rs  gru.rs  lib.rs  message_passing.rs  node.rs  persistence.rs  pruning.rs  query.rs  tensor.rs
crates/membrain-index/: Cargo.toml
crates/membrain-jobs/: Cargo.toml
crates/membrain-jobs/src/: lib.rs  scheduler.rs
crates/membrain-jobs/src/jobs/: consolidation.rs  decay.rs  mod.rs
crates/membrain-multi-agent/: Cargo.toml
crates/membrain-multi-agent/src/: lib.rs  sharing.rs  trust.rs  visibility.rs
crates/membrain-pipeline/: Cargo.toml
crates/membrain-pipeline/src/: lib.rs
crates/membrain-pipeline/src/adapters/: mod.rs  prompt.rs
crates/membrain-pipeline/src/retrieval/: gating.rs  intent.rs  mod.rs  pipeline.rs  reranker.rs  scoring.rs
crates/membrain-pipeline/src/write/: budget.rs  mod.rs  novelty.rs  pipeline.rs  policy.rs  redundancy.rs  salience.rs
crates/membrain-pyo3/: Cargo.toml  build.rs
crates/membrain-pyo3/src/: client.rs  graph.rs  lib.rs  types.rs
crates/membrain-storage/: Cargo.toml
crates/membrain-storage/src/: lib.rs
crates/membrain-storage/src/backend/: memory.rs  memscaledb.rs  mod.rs  sqlite.rs
crates/membrain-storage/tests/: memscaledb_integration.rs  scoped_search.rs
crates/membrain-test-utils/: Cargo.toml
crates/membrain-test-utils/src/: conflict.rs  embedding.rs  extractor.rs  lib.rs  llm_fixtures.rs  openai_mock_server.rs  storage.rs
docs/: .gitignore  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/advanced/: architecture.mdx  configuration.mdx  performance.mdx
docs/api-reference/: cbr-api.mdx  client.mdx  concurrent-indices.mdx  conversation.mdx  distributed-index.mdx  graph-operations.mdx  javascript-api.mdx  memory-operations.mdx  multi-tenant-index.mdx  overview.mdx  python-api.mdx  rerankers.mdx  rust-api.mdx  search-query.mdx  sharded-index.mdx  vector-backends.mdx
docs/cookbooks/: advanced-patterns.mdx  agent-training.mdx  ai-agents.mdx  basic-usage.mdx  chatbot-with-memory.mdx  graph-memory.mdx  multi-agent.mdx  rag-system.mdx  reranking.mdx  scoped-memory-per-user.mdx
docs/features/: agent-framework.mdx  case-based-reasoning.mdx  confidence-scoring.mdx  deduplication.mdx  graph-memory.mdx  memory-types.mdx  metadata-scoping.mdx  multi-agent.mdx  semantic-search.mdx
docs/integrations/: autogen.mdx  chromadb.mdx  crewai.mdx  faiss.mdx  lancedb.mdx  langchain.mdx  langgraph.mdx  llamaindex.mdx  milvus.mdx  pinecone.mdx  qdrant.mdx  vector-databases.mdx
examples/: README.md
membrain-node/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
membrain-py/: pyproject.toml
membrain-py/membrain/: __init__.py  _ffi.py  client.py  concurrent_flat_index.py  concurrent_hnsw_index.py  concurrent_ivf_index.py  concurrent_lsh_index.py  concurrent_vamana_index.py  conversation.py  distributed_index.py  errors.py  flat_index.py  graph.py  index.py  ivf_index.py  lsh_index.py  multi_tenant_index.py  sharded_index.py  types.py  vamana_index.py
membrain-py/membrain/agent/: __init__.py  agent.py  executor.py  planner.py
membrain-py/membrain/cbr/: __init__.py  classifier.py  dataset.py  experience_replay.py  parametric_retriever.py  prompt_builder.py  retriever.py  trainer.py  training_data.py
membrain-py/membrain/rerankers/: __init__.py  anthropic.py  base.py  cohere.py  jina.py  openai.py
membrain-py/membrain/vector_backends/: __init__.py  base.py  chroma.py  faiss.py  lancedb.py  milvus.py  pinecone.py  qdrant.py  simple.py
membrain-py/tests/: conftest.py  test_agent.py  test_async_conversation.py  test_cbr.py  test_client.py  test_concurrent_flat_index.py  test_concurrent_hnsw_index.py  test_concurrent_ivf_index.py  test_concurrent_lsh_index.py  test_concurrent_vamana_index.py  test_conflict_resolution.py  test_conflict_resolution_unit.py  test_conversation_async.py  test_flat_index.py  test_graph.py  test_graph_memory_unit.py  test_index_base.py  test_ivf_index.py  test_lsh_index.py  test_multi_tenant_index.py  test_ollama.py  test_rerankers.py  test_vamana_index.py
tests/: README.md  TESTING_SUMMARY.md
(+141 files in other folders)
