[package]
name = "membrain-compression"
version.workspace = true
edition.workspace = true
description = "Memory consolidation, decay, and compression for Membrain"

[dependencies]
membrain-core = { workspace = true }
membrain-storage = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
