[package]
name = "membrain-pipeline"
version.workspace = true
edition.workspace = true
description = "Write and retrieval pipelines for Membrain"

[dependencies]
membrain-core = { workspace = true }
membrain-storage = { workspace = true }
membrain-audit = { workspace = true }
membrain-graph = { workspace = true }
membrain-conflict = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
membrain-test-utils = { workspace = true }

[lints]
workspace = true
